syntax = "proto3";

option csharp_namespace = "Microservice.WebClient.Protos";

package taskProto;


service ModelTaskService {
  rpc GetTasks (SendRequest) returns (stream SendReply);
}

message SendRequest {
	int32 modelId = 1;
}
message SendReply {
   repeated ModelTask tasks = 1;
}

message ModelTask {
  int32 id = 1;
  string StartDate = 2;
  string EndDate = 3;
  string TaskType = 4;
  bool IsComplete = 5;
  int32 Progress = 6;
}